# cevio-rs2

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
crates/cevio/: Cargo.toml
crates/cevio-ai/: Cargo.toml  README.md
crates/cevio-ai-sys/: Cargo.toml  README.md  build.rs
crates/cevio-ai-sys/.metadata/: CeVIO.Talk.RemoteService2.IDL  main.cpp
crates/cevio-ai-sys/.windows/winmd/: CeVIO.Talk.RemoteService2.winmd
crates/cevio-ai-sys/src/: lib.rs
crates/cevio-ai/src/: cevio.rs  com_manager.rs  error.rs  lib.rs  parameter.rs
crates/cevio-sys/: Cargo.toml  build.rs
crates/cevio-sys/.metadata/: CeVIO.Talk.RemoteService2.IDL  generate.proj
crates/cevio-sys/.windows/winmd/: CeVIO.Talk.RemoteService2.winmd
crates/cevio-sys/src/: bindings.rs  cevio.rs  lib.rs
crates/cevio-sys/src/cevio/: IPhonemeData2.rs  IServiceControl2.rs  ISpeakingState2.rs  ITalker2.rs  ITalkerComponent2.rs
crates/cevio/src/: cevio.rs  com_manager.rs  lib.rs  parameter.rs
