[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["nusu-"]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
windows = { version = "^0.60.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant"
] }
windows-core = "^0.60.0"
windows-bindgen = "^0.60.0"
