[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
authors = ["nusu-github"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust bindings for CeVIO AI text-to-speech software"
repository = "https://github.com/nusu-github/cevio-rs2"
homepage = "https://github.com/nusu-github/cevio-rs2"
documentation = "https://docs.rs/cevio-ai"
keywords = ["cevio", "tts", "text-to-speech", "speech-synthesis", "windows"]
categories = ["multimedia::audio", "api-bindings", "os::windows-apis"]

[workspace.dependencies]
bounded-integer = { version = "0.5", features = ["macro"] }
derive_builder = "0.20"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
windows-core = "0.61"
windows-bindgen = "0.62"
