[package]
name = "cevio-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
serde = ["dep:serde", "bounded-integer/serde1"]

[dependencies]
bounded-integer = { workspace = true }
derive_builder = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

windows = { workspace = true }

cevio-ai-sys = { version = "*", path = "../cevio-ai-sys", features = ["unsafe_send"] }

[dev-dependencies]
serial_test = "3.2"
