[package]
name = "cevio-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
unsafe_send = []

[build-dependencies]
windows-bindgen = { workspace = true }

[dependencies]
windows = { workspace = true }
windows-core = { workspace = true }
