[package]
name = "cevio"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
derive_builder = "0.20.0"
windows = { workspace = true }
windows-core = { workspace = true }

cevio-sys = { path = "../cevio-sys" }
