[package]
name = "cevio"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bounded-integer = { workspace = true }
derive_builder = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }

windows = { workspace = true }

cevio-sys = { path = "../cevio-sys", features = ["unsafe_send"] }

[dev-dependencies]
serial_test = "3.2"
